--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
     <tr th:each="car : ${carList}">
-        <td th:text="${car.web.model}"></td>
+        <td th:text="${car.model}"></td>
         <td th:text="${car.region}"></td>
         <td th:text="${car.series}"></td>
     </tr>
